--- a/aula01/exploracao.ipynb
+++ b/aula01/exploracao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,30 +11,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"aula02/raw.csv\", sep = \";\")"
+    "df = pd.read_csv(\"raw.csv\", sep = \";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>email</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>cell</th>\n",
+       "      <th>nat</th>\n",
+       "      <th>name.title</th>\n",
+       "      <th>name.first</th>\n",
+       "      <th>name.last</th>\n",
+       "      <th>location.street.number</th>\n",
+       "      <th>location.street.name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>login.sha256</th>\n",
+       "      <th>dob.date</th>\n",
+       "      <th>dob.age</th>\n",
+       "      <th>registered.date</th>\n",
+       "      <th>registered.age</th>\n",
+       "      <th>id.name</th>\n",
+       "      <th>id.value</th>\n",
+       "      <th>picture.large</th>\n",
+       "      <th>picture.medium</th>\n",
+       "      <th>picture.thumbnail</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>female</td>\n",
+       "      <td>meral.kavaklioglu@example.com</td>\n",
+       "      <td>(446)-517-6701</td>\n",
+       "      <td>(757)-307-2542</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>Mrs</td>\n",
+       "      <td>Meral</td>\n",
+       "      <td>Kavaklıoğlu</td>\n",
+       "      <td>9756</td>\n",
+       "      <td>Maçka Cd</td>\n",
+       "      <td>...</td>\n",
+       "      <td>bdd9f44c33f31b21a797bd8fe93afdbec8c75eab94b7fd...</td>\n",
+       "      <td>1945-09-27T21:50:15.816Z</td>\n",
+       "      <td>78</td>\n",
+       "      <td>2014-05-10T15:27:44.944Z</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://randomuser.me/api/portraits/women/48.jpg</td>\n",
+       "      <td>https://randomuser.me/api/portraits/med/women/...</td>\n",
+       "      <td>https://randomuser.me/api/portraits/thumb/wome...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>male</td>\n",
+       "      <td>belmiro.novaes@example.com</td>\n",
+       "      <td>(09) 6521-5778</td>\n",
+       "      <td>(63) 0921-8550</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>Belmiro</td>\n",
+       "      <td>Novaes</td>\n",
+       "      <td>661</td>\n",
+       "      <td>Rua Minas Gerais</td>\n",
+       "      <td>...</td>\n",
+       "      <td>b3cfc3ed80e55aca1167ac229f4e5d44993e448e4e223d...</td>\n",
+       "      <td>1956-09-16T00:43:32.545Z</td>\n",
+       "      <td>67</td>\n",
+       "      <td>2004-02-21T06:15:45.907Z</td>\n",
+       "      <td>20</td>\n",
+       "      <td>CPF</td>\n",
+       "      <td>093.525.310-29</td>\n",
+       "      <td>https://randomuser.me/api/portraits/men/63.jpg</td>\n",
+       "      <td>https://randomuser.me/api/portraits/med/men/63...</td>\n",
+       "      <td>https://randomuser.me/api/portraits/thumb/men/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>ece.akyuz@example.com</td>\n",
+       "      <td>(889)-332-1396</td>\n",
+       "      <td>(008)-622-3325</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>Miss</td>\n",
+       "      <td>Ece</td>\n",
+       "      <td>Akyüz</td>\n",
+       "      <td>8144</td>\n",
+       "      <td>Mevlana Cd</td>\n",
+       "      <td>...</td>\n",
+       "      <td>31efa509ef0c40a151b32fe341af204e524233d3aeff9c...</td>\n",
+       "      <td>1955-08-24T22:19:43.886Z</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2021-01-28T19:36:40.016Z</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://randomuser.me/api/portraits/women/24.jpg</td>\n",
+       "      <td>https://randomuser.me/api/portraits/med/women/...</td>\n",
+       "      <td>https://randomuser.me/api/portraits/thumb/wome...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>female</td>\n",
+       "      <td>yonne.broersma@example.com</td>\n",
+       "      <td>(0006) 017509</td>\n",
+       "      <td>(06) 18397660</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>Miss</td>\n",
+       "      <td>Yonne</td>\n",
+       "      <td>Broersma</td>\n",
+       "      <td>9276</td>\n",
+       "      <td>J.M.Graadt van Roggenweg</td>\n",
+       "      <td>...</td>\n",
+       "      <td>e7653b2149a3c6173133df8b433b1a79c0400183bb0d26...</td>\n",
+       "      <td>1951-02-21T23:07:27.456Z</td>\n",
+       "      <td>73</td>\n",
+       "      <td>2010-01-04T03:31:13.621Z</td>\n",
+       "      <td>14</td>\n",
+       "      <td>BSN</td>\n",
+       "      <td>17040253</td>\n",
+       "      <td>https://randomuser.me/api/portraits/women/70.jpg</td>\n",
+       "      <td>https://randomuser.me/api/portraits/med/women/...</td>\n",
+       "      <td>https://randomuser.me/api/portraits/thumb/wome...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>teodor.jaksic@example.com</td>\n",
+       "      <td>012-1206-923</td>\n",
+       "      <td>064-2690-941</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>Mr</td>\n",
+       "      <td>Teodor</td>\n",
+       "      <td>Jakšić</td>\n",
+       "      <td>7760</td>\n",
+       "      <td>Palih Boraca</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8eb90c600eaa646fd038f0fb2b0612ef4c2232ed8e2c77...</td>\n",
+       "      <td>1978-11-07T23:59:01.429Z</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2015-08-19T13:25:29.775Z</td>\n",
+       "      <td>8</td>\n",
+       "      <td>SID</td>\n",
+       "      <td>659759646</td>\n",
+       "      <td>https://randomuser.me/api/portraits/men/41.jpg</td>\n",
+       "      <td>https://randomuser.me/api/portraits/med/men/41...</td>\n",
+       "      <td>https://randomuser.me/api/portraits/thumb/men/...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender                          email           phone            cell nat  \\\n",
+       "0  female  meral.kavaklioglu@example.com  (446)-517-6701  (757)-307-2542  TR   \n",
+       "1    male     belmiro.novaes@example.com  (09) 6521-5778  (63) 0921-8550  BR   \n",
+       "2  female          ece.akyuz@example.com  (889)-332-1396  (008)-622-3325  TR   \n",
+       "3  female     yonne.broersma@example.com   (0006) 017509   (06) 18397660  NL   \n",
+       "4    male      teodor.jaksic@example.com    012-1206-923    064-2690-941  RS   \n",
+       "\n",
+       "  name.title name.first    name.last  location.street.number  \\\n",
+       "0        Mrs      Meral  Kavaklıoğlu                    9756   \n",
+       "1         Mr    Belmiro       Novaes                     661   \n",
+       "2       Miss        Ece        Akyüz                    8144   \n",
+       "3       Miss      Yonne     Broersma                    9276   \n",
+       "4         Mr     Teodor       Jakšić                    7760   \n",
+       "\n",
+       "       location.street.name  ...  \\\n",
+       "0                  Maçka Cd  ...   \n",
+       "1         Rua Minas Gerais   ...   \n",
+       "2                Mevlana Cd  ...   \n",
+       "3  J.M.Graadt van Roggenweg  ...   \n",
+       "4              Palih Boraca  ...   \n",
+       "\n",
+       "                                        login.sha256  \\\n",
+       "0  bdd9f44c33f31b21a797bd8fe93afdbec8c75eab94b7fd...   \n",
+       "1  b3cfc3ed80e55aca1167ac229f4e5d44993e448e4e223d...   \n",
+       "2  31efa509ef0c40a151b32fe341af204e524233d3aeff9c...   \n",
+       "3  e7653b2149a3c6173133df8b433b1a79c0400183bb0d26...   \n",
+       "4  8eb90c600eaa646fd038f0fb2b0612ef4c2232ed8e2c77...   \n",
+       "\n",
+       "                   dob.date dob.age           registered.date  registered.age  \\\n",
+       "0  1945-09-27T21:50:15.816Z      78  2014-05-10T15:27:44.944Z               9   \n",
+       "1  1956-09-16T00:43:32.545Z      67  2004-02-21T06:15:45.907Z              20   \n",
+       "2  1955-08-24T22:19:43.886Z      68  2021-01-28T19:36:40.016Z               3   \n",
+       "3  1951-02-21T23:07:27.456Z      73  2010-01-04T03:31:13.621Z              14   \n",
+       "4  1978-11-07T23:59:01.429Z      45  2015-08-19T13:25:29.775Z               8   \n",
+       "\n",
+       "   id.name        id.value                                     picture.large  \\\n",
+       "0      NaN             NaN  https://randomuser.me/api/portraits/women/48.jpg   \n",
+       "1      CPF  093.525.310-29    https://randomuser.me/api/portraits/men/63.jpg   \n",
+       "2      NaN             NaN  https://randomuser.me/api/portraits/women/24.jpg   \n",
+       "3      BSN        17040253  https://randomuser.me/api/portraits/women/70.jpg   \n",
+       "4      SID       659759646    https://randomuser.me/api/portraits/men/41.jpg   \n",
+       "\n",
+       "                                      picture.medium  \\\n",
+       "0  https://randomuser.me/api/portraits/med/women/...   \n",
+       "1  https://randomuser.me/api/portraits/med/men/63...   \n",
+       "2  https://randomuser.me/api/portraits/med/women/...   \n",
+       "3  https://randomuser.me/api/portraits/med/women/...   \n",
+       "4  https://randomuser.me/api/portraits/med/men/41...   \n",
+       "\n",
+       "                                   picture.thumbnail  \n",
+       "0  https://randomuser.me/api/portraits/thumb/wome...  \n",
+       "1  https://randomuser.me/api/portraits/thumb/men/...  \n",
+       "2  https://randomuser.me/api/portraits/thumb/wome...  \n",
+       "3  https://randomuser.me/api/portraits/thumb/wome...  \n",
+       "4  https://randomuser.me/api/portraits/thumb/men/...  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['gender', 'email', 'phone', 'cell', 'nat', 'name.title', 'name.first',\n",
+       "       'name.last', 'location.street.number', 'location.street.name',\n",
+       "       'location.city', 'location.state', 'location.country',\n",
+       "       'location.postcode', 'location.coordinates.latitude',\n",
+       "       'location.coordinates.longitude', 'location.timezone.offset',\n",
+       "       'location.timezone.description', 'login.uuid', 'login.username',\n",
+       "       'login.password', 'login.salt', 'login.md5', 'login.sha1',\n",
+       "       'login.sha256', 'dob.date', 'dob.age', 'registered.date',\n",
+       "       'registered.age', 'id.name', 'id.value', 'picture.large',\n",
+       "       'picture.medium', 'picture.thumbnail'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
