--- a/teste.ipynb
+++ b/teste.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "con = mysql.connector.connect(\n",
-    "            user='root', password='root', port=\"3306\", database='db')"
+    "            user='root', password='root', port=\"3306\", host = 'localhost', database='db')"
    ]
   },
   {
@@ -50,60 +50,60 @@
        "  datetime.date(1965, 6, 20),\n",
        "  datetime.datetime(2024, 3, 16, 0, 0)),\n",
        " (2,\n",
-       "  'male',\n",
-       "  'Mr',\n",
-       "  'Emilio',\n",
-       "  'Nordli',\n",
-       "  'Brønnøysund',\n",
-       "  'Hordaland',\n",
-       "  'Norway',\n",
-       "  'emilio.nordli@example.com',\n",
-       "  datetime.date(1960, 2, 25),\n",
-       "  datetime.datetime(2024, 4, 3, 0, 50, 3)),\n",
-       " (3,\n",
-       "  'male',\n",
-       "  'Mr',\n",
-       "  'Bogdan',\n",
-       "  'Isaković',\n",
-       "  'Kula',\n",
-       "  'Pomoravlje',\n",
-       "  'Serbia',\n",
-       "  'bogdan.isakovic@example.com',\n",
-       "  datetime.date(1973, 10, 15),\n",
-       "  datetime.datetime(2024, 4, 3, 0, 50, 3)),\n",
-       " (4,\n",
-       "  'female',\n",
-       "  'Mrs',\n",
-       "  'Hannah',\n",
-       "  'Patel',\n",
-       "  'Lasalle',\n",
-       "  'Nunavut',\n",
-       "  'Canada',\n",
-       "  'hannah.patel@example.com',\n",
-       "  datetime.date(1972, 5, 26),\n",
-       "  datetime.datetime(2024, 4, 3, 0, 50, 3)),\n",
-       " (5,\n",
        "  'female',\n",
        "  'Ms',\n",
-       "  'Julia',\n",
-       "  'Benítez',\n",
-       "  'Vigo',\n",
-       "  'Región de Murcia',\n",
-       "  'Spain',\n",
-       "  'julia.benitez@example.com',\n",
-       "  datetime.date(1973, 7, 27),\n",
-       "  datetime.datetime(2024, 4, 3, 0, 50, 3)),\n",
+       "  'سارینا',\n",
+       "  'قاسمی',\n",
+       "  'خمینی\\u200cشهر',\n",
+       "  'بوشهر',\n",
+       "  'Iran',\n",
+       "  'sryn.qsmy@example.com',\n",
+       "  datetime.date(1961, 2, 10),\n",
+       "  datetime.datetime(2024, 4, 10, 0, 20, 8)),\n",
+       " (3,\n",
+       "  'female',\n",
+       "  'Mrs',\n",
+       "  'Shanaya',\n",
+       "  'Padmanabha',\n",
+       "  'Akola',\n",
+       "  'Uttarakhand',\n",
+       "  'India',\n",
+       "  'shanaya.padmanabha@example.com',\n",
+       "  datetime.date(1959, 8, 15),\n",
+       "  datetime.datetime(2024, 4, 10, 0, 20, 8)),\n",
+       " (4,\n",
+       "  'male',\n",
+       "  'Mr',\n",
+       "  'Winfried',\n",
+       "  'Ter Maat',\n",
+       "  'Haarle gem Tubbergen',\n",
+       "  'Drenthe',\n",
+       "  'Netherlands',\n",
+       "  'winfried.termaat@example.com',\n",
+       "  datetime.date(1994, 5, 24),\n",
+       "  datetime.datetime(2024, 4, 10, 0, 20, 8)),\n",
+       " (5,\n",
+       "  'male',\n",
+       "  'Mr',\n",
+       "  'Charlie',\n",
+       "  'Wright',\n",
+       "  'Taupo',\n",
+       "  \"Hawke'S Bay\",\n",
+       "  'New Zealand',\n",
+       "  'charlie.wright@example.com',\n",
+       "  datetime.date(1958, 11, 29),\n",
+       "  datetime.datetime(2024, 4, 10, 0, 20, 8)),\n",
        " (6,\n",
        "  'female',\n",
        "  'Miss',\n",
-       "  'Gonca',\n",
-       "  'Erberk',\n",
-       "  'Burdur',\n",
-       "  'Kars',\n",
-       "  'Turkey',\n",
-       "  'gonca.erberk@example.com',\n",
-       "  datetime.date(1982, 11, 4),\n",
-       "  datetime.datetime(2024, 4, 3, 0, 50, 3))]"
+       "  'Imogen',\n",
+       "  'Johnson',\n",
+       "  'Tauranga',\n",
+       "  'Marlborough',\n",
+       "  'New Zealand',\n",
+       "  'imogen.johnson@example.com',\n",
+       "  datetime.date(1968, 2, 3),\n",
+       "  datetime.datetime(2024, 4, 10, 0, 20, 8))]"
       ]
      },
      "execution_count": 4,
