--- a/teste.ipynb
+++ b/teste.ipynb
@@ -48,62 +48,7 @@
        "  'United Kingdom',\n",
        "  'victoria.lambert@example.com',\n",
        "  datetime.date(1965, 6, 20),\n",
-       "  datetime.datetime(2024, 3, 16, 0, 0)),\n",
-       " (2,\n",
-       "  'female',\n",
-       "  'Ms',\n",
-       "  'سارینا',\n",
-       "  'قاسمی',\n",
-       "  'خمینی\\u200cشهر',\n",
-       "  'بوشهر',\n",
-       "  'Iran',\n",
-       "  'sryn.qsmy@example.com',\n",
-       "  datetime.date(1961, 2, 10),\n",
-       "  datetime.datetime(2024, 4, 10, 0, 20, 8)),\n",
-       " (3,\n",
-       "  'female',\n",
-       "  'Mrs',\n",
-       "  'Shanaya',\n",
-       "  'Padmanabha',\n",
-       "  'Akola',\n",
-       "  'Uttarakhand',\n",
-       "  'India',\n",
-       "  'shanaya.padmanabha@example.com',\n",
-       "  datetime.date(1959, 8, 15),\n",
-       "  datetime.datetime(2024, 4, 10, 0, 20, 8)),\n",
-       " (4,\n",
-       "  'male',\n",
-       "  'Mr',\n",
-       "  'Winfried',\n",
-       "  'Ter Maat',\n",
-       "  'Haarle gem Tubbergen',\n",
-       "  'Drenthe',\n",
-       "  'Netherlands',\n",
-       "  'winfried.termaat@example.com',\n",
-       "  datetime.date(1994, 5, 24),\n",
-       "  datetime.datetime(2024, 4, 10, 0, 20, 8)),\n",
-       " (5,\n",
-       "  'male',\n",
-       "  'Mr',\n",
-       "  'Charlie',\n",
-       "  'Wright',\n",
-       "  'Taupo',\n",
-       "  \"Hawke'S Bay\",\n",
-       "  'New Zealand',\n",
-       "  'charlie.wright@example.com',\n",
-       "  datetime.date(1958, 11, 29),\n",
-       "  datetime.datetime(2024, 4, 10, 0, 20, 8)),\n",
-       " (6,\n",
-       "  'female',\n",
-       "  'Miss',\n",
-       "  'Imogen',\n",
-       "  'Johnson',\n",
-       "  'Tauranga',\n",
-       "  'Marlborough',\n",
-       "  'New Zealand',\n",
-       "  'imogen.johnson@example.com',\n",
-       "  datetime.date(1968, 2, 3),\n",
-       "  datetime.datetime(2024, 4, 10, 0, 20, 8))]"
+       "  datetime.datetime(2024, 3, 16, 0, 0))]"
       ]
      },
      "execution_count": 4,
